Fix title wrap in header (closes: #13070):
- share/html/Elements/PageLayout: which element with
  wrap is controlled by html flow, so invert h1 and
  topactions to make sure h1 wrap
- share/html/NoAuth/css/web2/layout.css: with inversion,
  only topactions floats now. Also make sure queue drop
  down stay in a reasonable width
- share/html/NoAuth/css/web2/msie.css: msie doesn't
  handle max-width :(

git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/branches/html-css-cleanup@18375 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/layout.css
+++ b/share/html/NoAuth/css/web2/layout.css
@@ -94,8 +94,9 @@ div#header {
  background: transparent;
  font-size: 0.9em;
  float: right;
- width: 60%;
+ width: auto;
  margin-top: 1.1em;
+ margin-left: 1em;
  text-align: right;
 }
 
@@ -111,6 +112,10 @@ div#header {
 
 #topactions #CreateTicketInQueue {
  display: inline;
+}
+
+#topactions #CreateTicketInQueue select.select-queue {
+    max-width: 12em;
 }
 
 #topactions #simple-search {
@@ -197,13 +202,10 @@ div#quick-personal {
 
 
 div#header h1 {
- float: left;
- overflow: hidden;
  font-size: 1.4em;
  margin-top: 0.4em;
  padding: 0.25em 0.25em 0em 0em;
  color: #fff;
- width: 39%;
 }
 
 /* in multi-column layouts, make sure we have an internal gutter */
