--- a/share/html/NoAuth/css/web2/msie.css
+++ b/share/html/NoAuth/css/web2/msie.css
@@ -55,6 +55,10 @@ div#quickbar { height: 1.2em;
     width: 10em;    
 }
 
+#topactions #CreateTicketInQueue select.select-queue {
+    width: 12em;
+}
+
 
 #comp-Search-Build #editquery {
   margin-top: 0.2em;
